--- a/src/main/java/com/mycompany/pos/BrandForm.form
+++ b/src/main/java/com/mycompany/pos/BrandForm.form
@@ -187,7 +187,7 @@
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder position="1" title="Category">
+            <TitledBorder position="1" title="Brand">
               <Font PropertyName="font" name="Lucida Grande" size="16" style="0"/>
             </TitledBorder>
           </Border>
@@ -345,7 +345,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="40" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="CATEGORY"/>
+        <Property name="text" type="java.lang.String" value="BRAND"/>
       </Properties>
     </Component>
   </SubComponents>
